--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
         <header>
                 <!-- BACKGROUND PIC -->
                 <div id="background-pic-container">
-                        <div id="background-pic-caption-container">
-                                <span class="">G'DAY :)</span><br>
-                                <span class="">THANKS FOR STOPPING BY</span>
+                        <div id="home-msg-first-row" class="">
+                        </div>
+                        <div id="home-msg-second-row" class="">
                         </div>
                 </div>
                 <!-- BACKGROUND PIC END -->
@@ -93,15 +93,19 @@
                                 </div>
                                 <ul id="about-second-flex-container" class="light-blue">
                                         <li class="text-center" data-aos="fade"
-                                                data-aos-anchor-placement="about-first-flex-container">Software
+                                                data-aos-anchor-placement="about-first-flex-container"
+                                                data-aos-delay="400">Software
                                                 Developer</li>
-                                        <li class="text-center" data-aos="fade" data-aos-delay="200"
-                                                data-aos-anchor-placement="about-first-flex-container">London, UK</li>
-                                        <li class="text-center" data-aos="fade" data-aos-delay="400"
-                                                data-aos-anchor-placement="about-first-flex-container">
+                                        <li class="text-center" data-aos="fade"
+                                                data-aos-anchor-placement="about-first-flex-container"
+                                                data-aos-delay="600">London, UK</li>
+                                        <li class="text-center" data-aos="fade"
+                                                data-aos-anchor-placement="about-first-flex-container"
+                                                data-aos-delay="800">
                                                 ftauriello@hotmail.com</li>
-                                        <li class="text-center" data-aos="fade" data-aos-delay="600"
-                                                data-aos-anchor-placement="about-first-flex-container">07572093185</li>
+                                        <li class="text-center" data-aos="fade"
+                                                data-aos-anchor-placement="about-first-flex-container"
+                                                data-aos-delay="1000">07572093185</li>
                                 </ul>
                         </div>
                 </section>
@@ -127,7 +131,7 @@
                                 <!-- MY BOX LAYOUT -->
                                 {% for post in site.posts limit: 3 %}
                                 {% if forloop.index == 1 %}
-                                <div class="blog-card border" data-aos="fade-up" data-aos-delay="100">
+                                <div class="blog-card border" data-aos="fade-up">
                                         <img src="../images/download.svg" alt="Blog post image">
                                         <div class="blog-post-container border">
                                                 <a href="{{ post.url }}">
@@ -138,7 +142,7 @@
                                         </div>
                                 </div>
                                 {% elsif forloop.index == 2 %}
-                                <div class="blog-card border" data-aos="fade-up" data-aos-delay="200">
+                                <div class="blog-card border" data-aos="fade-up"></span>
                                         <img src="../images/download.svg" alt="Blog post image">
                                         <div class="blog-post-container border">
                                                 <a href="{{ post.url }}">
@@ -149,7 +153,7 @@
                                         </div>
                                 </div>
                                 {% else %}
-                                <div class="blog-card border" data-aos="fade-up" data-aos-delay="300">
+                                <div class="blog-card border" data-aos="fade-up">
                                         <img src="../images/download.svg" alt="Blog post image">
                                         <div class="blog-post-container border">
                                                 <a href="{{ post.url }}">
