--- a/css/main.css
+++ b/css/main.css
@@ -122,24 +122,62 @@ li {
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
-#background-pic-caption-container {
-    width: 100%;
-    text-align: center;
+#home-msg-first-row, #home-msg-second-row {
+    flex-wrap: wrap;
+    display: flex;
+    /* border: 1px solid white; */
 }
 
-#background-pic-caption-container span {
-    background-color: rgb(148, 148, 148);
-    color: rgb(0, 0, 0);
-    padding: 18px;
-    font-size: 25px;
-    letter-spacing: 10px;
+.letter-wrapper {
+    /* border: 1px solid red; */
+    position: relative;
+    overflow: hidden;
+    height: 56px;
+    min-width: 48px;
     display: inline-block;
-    margin-top: 2px;
+    text-align: center;
+    margin-right: 2px;
 }
+
+.span-letter {
+    font-size: 35px;
+    /* border: solid 1px white; */
+    background-color: rgb(148, 148, 148);
+    position: absolute;
+    animation: slide .05s forwards;
+    left: -100%;
+}
+
+@keyframes slide {
+    100% { left: 0; width: 100%;}
+}
+
+
+/* 
+.letter-wrapper:nth-child(1) span {
+    animation-delay: 1s;
+}
+.letter-wrapper:nth-child(2) span {
+    animation-delay: 1.2s;
+}
+.letter-wrapper:nth-child(3) span {
+    animation-delay: 1.4s;
+}
+.letter-wrapper:nth-child(4) span {
+    animation-delay: 1.6s;
+}
+.letter-wrapper:nth-child(5) span {
+    animation-delay: 1.8s;
+} */
+
+
+
+
 
 /**************************************************************************************************************************/
 
